==================
sqlninja changelog
==================
Version 0.2.999
+ Fixed keep-alive bug

Version 0.2.999-alpha1
+ Added data extraction module

+ Added vbscript-based upload

+ Split big ugly script into modules

+ Lots of refactoring

Version 0.2.6-r1
+ Fixed fingerprinting bug

Version 0.2.6
+ Added ICMP shell

+ Added support for CVE-2010-0232 (KiTrap0d)

+ Added header-based injection

+ Removed conf file autogen (unsuited to new way to configure injection)

+ Bug fixes

Version 0.2.5
+ Added HTTP proxy support

+ Upload mode supports multiple script lines per request

+ Upload mode supports files larger than 64k

+ SSL is enabled by default for 443, disabled for 80

+ SSL is now disabled by default (unless port is 80 of course)

+ Added switch for HTTP/1.0 and HTTP/1.1

+ Support for token kidnapping via churrasco.exe

+ Incorporated makescr.pl into the main program

+ DEP checking/disabling is now optional

+ Added support for msfencode

+ Added fingerprint of user running SQL Server

Version 0.2.3-r1
+ Added unobfuscated SQL in debug output

+ Fixed a bug in the Metasploit module

+ Fixed a few minor bugs

Version 0.2.3
+ Added metasploit module

+ Added makescr.pl

+ Dirshell module now allows to specify an alternate host

Version 0.2.2
+ Added evasion techniques

+ Added single command mode

+ Added diagnostics to upload mode

+ Upload mode handles scripts generated by (hopefully) all tools

+ Automatic URL-encoding now performed only on the injected query

+ Minor optimizations and fixes

Version 0.2.1
+ Added fingerprint of authentication mode

Version: 0.2.0
+ Added incremental bruteforce mode

+ Escalation is automatically performed at the end of the bruteforce

+ In escalation mode, '-u' is not needed anymore

+ Documentation now in HTML format (and WYSIWYG editors really suck)

+ A few minor fixes

Version: 0.1.3
+ Optimized bruteforce mode

+ Exploit strings now accepts spaces

+ Comment ("--") is appended at user's discretion
