@@ -99,7 +99,8 @@ $conf->{'msfpath'} = "";
 $conf->{'msfencoder'} = "";
 $conf->{'msfencodecount'} = 5;
 $conf->{'msfclient'} = "msfconsole";
-$conf->{'msfserverdelay'} = 15;
+$conf->{'msfserverdelay'} = 25;
+$conf->{'ps1params'} = "-executionpolicy bypass -noexit";
 $conf->{'lines_per_req'} = 10; # script lines to upload with each request
 $conf->{'churrasco'} = 0;
 $conf->{'checkdep'} = "no";
