@@ -102,13 +102,13 @@ blindtime = 5
 msfpath = /home/icesurfer/metasploit-framework
 
 # Metasploit client to use (msfcli or msfconsole)
-msfclient = msfcli
+msfclient = msfconsole
 
 # When using metasploit, it might take several seconds to start msfcli/msfconsole
 # This can cause problems with reverse connections. Use this parameter
 # to tell sqlninja how many seconds should the server wait before calling back.
-# Minimum: 5 seconds. Max: 59 seconds. Default: 15 seconds
-msfserverdelay = 15
+# Minimum: 5 seconds. Max: 59 seconds. Default: 25 seconds
+msfserverdelay = 25
 
 # Evasion techniques to be used. Possible choices are:
 # 1 - Query hex-encoding
@@ -182,6 +182,10 @@ msfencoder = x86/shikata_ga_nai
 
 # Number of times to encode the metasploit payload. Default: 5
 # msfencodecount = 4
+
+# Parameters to add when calling powershell
+# Default: -executionpolicy bypass -noexit
+# ps1params = -executionpolicy bypass -noexit
 
 # Interface to sniff when in backscan mode
 device = eth0
